<resources>
    <string name="app_name">SuperShopper</string>
    <string name="app_name_with_space">Super Shopper</string>
    <string name="motto">We help you keep\nyour shopping list in mind.</string>
    <string name="low" translatable="false">LOW</string>
    <string name="medium" translatable="false">MEDIUM</string>
    <string name="high" translatable="false">HIGH</string>
    <string name="facebook_app_id" translatable="false">532612537445839</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb532612537445839</string>
    <string name="welcome_to">Welcome to </string>
    <string name="welcome_back">Welcome back</string>
    <string name="sorry_something_went_wrong">Sorry, something went wrong</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="dont_have_an_account_yet_register_now">Don\'t have an account yet? <big><b>Register Now</b></big></string>
    <string name="registration_successful">Registration successful!</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="or_register_with">Or register with</string>
    <string name="already_have_an_account">Already have an account? <big><b>Login</b></big></string>
    <string name="check_your_emails_to_reset_your_password">Check your emails to reset your password!</string>
    <string name="your_password_has_been_updated">Your password has been updated</string>
    <string name="your_email_has_been_updated">Your email has been updated</string>
    <string name="your_name_has_been_updated">Your name has been updated</string>
    <string name="your_profile_picture_has_been_updated">Your profile picture has been updated</string>
    <string name="login_successful">Login Successful!</string>
    <string name="you_have_successfully_logged_out">You have successfully logged out</string>
    <string name="the_security_check_was_successful">The security check was successful.</string>
    <string name="request_canceled">Request canceled</string>
    <string name="item_updated">Item updated</string>
    <string name="shopping_list_deleted">Shopping list deleted</string>
    <string name="accept_request">Accept request</string>
    <string name="accept">Accept</string>
    <string name="friend_deleted">Friend deleted</string>
    <string name="delete_request">Delete request</string>
    <string name="decline_request">Decline request</string>
    <string name="decline">Decline</string>
    <string name="delete_friend">Delete friend</string>
    <string name="open_items">Open Items</string>
    <string name="bought_items">Bought Items</string>
    <string name="history">History</string>
    <string name="friends">Friends</string>
    <string name="requests">Requests</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="create_new_list">Create new list</string>
    <string name="edit_list">Edit list</string>
    <string name="give_me_a_name">Give me a name</string>
    <string name="find_your_friends">Find your friends</string>
    <string name="enter_at_least_3_characters">Enter at least 3 characters</string>
    <string name="you_have_already_added_this_friend">You have already added this friend</string>
    <string name="share_with_your_friends">Share with your friends</string>
    <string name="friends_shared_with">Friends shared with</string>
    <string name="due_date">Due date</string>
    <string name="from_to">From: %1$s\nTo: %2$s</string>
    <string name="add_new_item">Add new item</string>
    <string name="unit">Unit</string>
    <string name="gram">gram</string>
    <string name="g">g</string>
    <string name="dag">dag</string>
    <string name="kg">kg</string>
    <string name="ml">ml</string>
    <string name="items">Items</string>
    <string name="details">Details</string>
    <string name="count_items">%1$s Items</string>
    <string name="plus_number">+ %1$s</string>
    <string name="quantity">Quantity</string>
    <string name="enter_a_quantity">Enter a quantity</string>
    <string name="priority">Priority</string>
    <string name="save_list">Save List</string>
    <string name="add_item">Add item</string>
    <string name="update_item">Update item</string>
    <string name="enter_a_name">Enter a name</string>
    <string name="enter_a_qunatity">Enter a qunatity</string>
    <string name="dl">dl</string>
    <string name="l">l</string>
    <string name="pc">pc</string>
    <string name="select_a_unit">Select a unit</string>
    <string name="select_a_priority">Select a priority</string>
    <string name="select_a_due_date">Select a due date</string>
    <string name="your_list_is_empty">Your list is empty</string>
    <string name="list_details">List details</string>
    <string name="shopping_list_details">Shopping list details</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="creator">Creator</string>
    <string name="please_enter_nyour_email_address">Please enter\nyour email address</string>
    <string name="here">here</string>
    <string name="get_new_password">Get new password</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_shopping_list">Delete shopping list</string>
    <string name="do_you_really_want_to_delete_these_shopping_list_nthis_process_cannot_be_undone">Do you really want\nto delete this shopping list?\n\nThis process cannot be undone.</string>
    <string name="yes_delete">Yes, Delete</string>
    <string name="no_cancel">No, Cancel</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="please_enter_nyour_new_password">Please enter\nyour new password</string>
    <string name="for_security_reasons_nplease_provide_your_login_information">For security reasons,\nplease provide your login information.</string>
    <string name="ok">OK</string>
    <string name="change_email">Change email</string>
    <string name="please_enter_nyour_new_email">Please enter\nyour new email</string>
    <string name="for_security_reasons_n_you_must_log_in_again">For security reasons,\n you must log in again.</string>
    <string name="search">Search</string>
    <string name="send_friend_request">Send friend request</string>
    <string name="search_friends">Search friends</string>
    <string name="search_friend">Search Friend</string>
    <string name="sensitive_data">Sensitive Data</string>
    <string name="reset_password">Reset Password</string>
    <string name="clear_filter">Clear filter</string>
    <string name="filter_shopping_lists">Filter shopping lists</string>
    <string name="status">Status</string>
    <string name="range_of_due_date">Range of due date</string>
    <string name="select_a_date_range">Select a date range</string>
    <string name="apply_filter">Apply filter</string>
    <string name="close_shopping_list">Close shopping list</string>
    <string name="do_you_really_want_nto_close_this_shopping_list_n_nlater_on_you_can_reopen_it_again">Do you really want\nto close this shopping list?\n\nLater on you can reopen it again.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="done">Done</string>
    <string name="closed">Closed</string>
    <string name="no_shopping_list_found">No shopping list found!</string>
    <string name="oh_no">Oh no!</string>
    <string name="no_friends_found">No friends found!</string>
    <string name="no_users_found">No users found!</string>
    <string name="no_requests_found">No requests fround</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
</resources>