<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        tools:context=".fragments.SearchFriendFragment">

        <EditText
            android:id="@+id/et_search"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="@dimen/margin_large"
            android:paddingStart="@dimen/margin_large"
            android:paddingEnd="@dimen/margin_large"
            android:paddingTop="@dimen/margin_small"
            android:paddingBottom="@dimen/margin_small"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/rv_listOfFriends"
            android:background="@drawable/shape_roundedallcorners_noborder_whitebackground"
            android:hint="@string/search_friends" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_listOfFriends"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:background="@drawable/shape_rounded_top_corners_white_noborder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_search"/>

        <LinearLayout
            android:id="@+id/ll_emptyPerson"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_6xlarge"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="@id/rv_listOfFriends"
            android:gravity="center">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_person_brown"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textsize_3xlarge"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/oh_no"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/no_users_found"/>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:visibility="invisible"
            app:layout_constraintTop_toTopOf="@+id/et_search"
            app:layout_constraintBottom_toBottomOf="@+id/et_search"
            app:layout_constraintRight_toRightOf="@+id/et_search"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>