<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:fillViewport="true"
        android:background="@color/colorPrimary">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rounded_topleft_corner_white_noborder"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <!--ll_deleteShoppingList-->
            <LinearLayout
                android:id="@+id/ll_deleteShoppingList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="invisible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:id="@+id/iv_deleteIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_delete"
                    android:layout_marginTop="@dimen/margin_xxlarge"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

                <TextView
                    android:id="@+id/tv_delete_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_shopping_list"
                    android:textColor="@color/red"
                    android:layout_marginTop="@dimen/margin_small"
                    android:paddingBottom="@dimen/margin_xxlarge"
                    android:textSize="@dimen/textsize_large"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/iv_deleteIcon"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

                <TextView
                    android:id="@+id/tv_deleteQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_medium"
                    android:layout_marginTop="@dimen/margin_xxlarge"
                    android:layout_marginStart="@dimen/margin_4xlarge"
                    android:layout_marginEnd="@dimen/margin_4xlarge"
                    android:gravity="center"
                    android:text="@string/do_you_really_want_to_delete_these_shopping_list_nthis_process_cannot_be_undone"
                    app:layout_constraintTop_toBottomOf="@+id/tv_areYouSure_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
            </LinearLayout>
            <!--ll_closeShoppingList-->
            <LinearLayout
                android:id="@+id/ll_closeShoppingList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:id="@+id/iv_closeIcon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_close_brown"
                    android:layout_marginTop="@dimen/margin_xxlarge"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

                <TextView
                    android:id="@+id/tv_close_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/close_shopping_list"
                    android:textColor="@color/brown"
                    android:layout_marginTop="@dimen/margin_small"
                    android:paddingBottom="@dimen/margin_xxlarge"
                    android:textSize="@dimen/textsize_large"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/iv_closeIcon"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>

                <TextView
                    android:id="@+id/tv_closeQuestion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize_medium"
                    android:layout_marginTop="@dimen/margin_xxlarge"
                    android:layout_marginStart="@dimen/margin_4xlarge"
                    android:layout_marginEnd="@dimen/margin_4xlarge"
                    android:gravity="center"
                    android:text="@string/do_you_really_want_nto_close_this_shopping_list_n_nlater_on_you_can_reopen_it_again"
                    app:layout_constraintTop_toBottomOf="@+id/tv_areYouSure_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_positive"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/margin_4xlarge"
                android:text="@string/yes"
                android:paddingStart="@dimen/margin_medium"
                android:paddingEnd="@dimen/margin_medium"
                android:background="@drawable/shape_rounded_lightred_filled_noborder"
                app:layout_constraintTop_toBottomOf="@+id/ll_deleteShoppingList"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/btn_negative"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_negative"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="@dimen/margin_4xlarge"
                android:layout_marginEnd="@dimen/margin_xlarge"
                android:text="@string/no"
                android:paddingStart="@dimen/margin_medium"
                android:paddingEnd="@dimen/margin_medium"
                android:background="@drawable/shape_rounded_lightgreen_filled_noborder"
                app:layout_constraintTop_toBottomOf="@+id/ll_deleteShoppingList"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/btn_positive"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>