<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin_small"
        android:paddingStart="@dimen/margin_xlarge"
        android:paddingEnd="@dimen/margin_xlarge"
        tools:context=".fragments.ResetPasswordFragment">

        <TextView
            android:id="@+id/tv_forgotPassword_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/tv_pleaseEnter_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/textsize_large"
            android:text="@string/please_enter_nyour_new_password"
            android:layout_marginTop="@dimen/margin_xlarge"
            android:layout_marginBottom="@dimen/margin_xlarge"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgotPassword_text"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_newPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_xlarge"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true"
            app:passwordToggleTintMode="multiply"
            app:passwordToggleTint="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@+id/tv_pleaseEnter_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_newPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_xlarge"
                android:hint="@string/here"
                android:background="@color/light_brown"
                android:inputType="textPassword"
                android:textCursorDrawable="@null"
                app:layout_constraintTop_toBottomOf="@+id/tv_pleaseEnter_text"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_changePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:layout_marginBottom="@dimen/margin_large"
            android:backgroundTint="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@+id/til_newPassword"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>